(feat) add link for downloading the image

--- a/week7_(final_project)/finding_suspect.ipynb
+++ b/week7_(final_project)/finding_suspect.ipynb
@@ -216,6 +216,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# download the image using this link\n",
+    "\n",
+    "! wget https://github.com/hse-aml/bayesian-methods-for-ml/releases/download/v0.1/CelebA_VAE_small_8.h5  -O week7_\\(final_project\\)/CelebA_VAE_small_8.h5"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "metadata": {
     "colab": {},
